--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+@font-face {
+    font-family: "Gilbert";
+    font-weight: 100;
+    src: url("fonts/Gilbert-Bold\ Preview5.woff") format("woff2");
+}
+
 body {
     background-color: #d6d6d6;
     font-family: "helvetica";
