--- a/style.css
+++ b/style.css
@@ -18,6 +18,14 @@ body {
     overflow-x: hidden;
 }
 
+.topbar {
+    position: fixed;
+    width: 100%;
+    background: #d6d6d6;
+    z-index: 1000;
+    margin: 0;
+}
+
 h1 {
     font-family: "Helvetica";
     font-weight: normal;
@@ -36,7 +44,7 @@ h1 {
     line-height: 1.5em;
     vertical-align: top;
     margin: auto;
-    padding: 30px;
+    padding-bottom: 100px;
     max-width: 80%;
     min-width: 40%;
 }
@@ -69,6 +77,7 @@ h2 {
     font-weight: bold;
     font-size: 120px;
     padding-left: 80px;
+    padding-top: 100px;
     display: block;
     width: 20%;
     border-bottom: solid 5px black;
@@ -120,7 +129,7 @@ h2 {
     font-size: 16px;
     position: sticky;
     align-self: flex-start;
-    top: 20px;
+    top: 60px;
     font-weight: lighter;
 }
 
@@ -200,6 +209,14 @@ ul {
     --move-final: calc( -20% + var(--offset));
 }
 
+.marquee-figs {
+    position: relative;
+    overflow: hidden;
+    --offset: 25px;
+    --move-initial: calc( -20% + var(--offset));
+    --move-final: calc( -40% + var(--offset));
+}
+
 .marquee-inner {
     width: fit-content;
     display: flex;
@@ -210,10 +227,12 @@ ul {
 
 .marquee span {
     font-family: "gilbert";
-    font-size: 100px;
+    font-size: 30px;
     font-weight: bold;
     padding: 0 100px;
     color: #9dffba;
+    border-top: 5px dashed #9dffba;
+    border-bottom: 5px dashed #9dffba;
 }
 
 .marquee:hover .marquee-inner {
