--- a/style.css
+++ b/style.css
@@ -196,7 +196,8 @@ a:hover {
     align-self: flex-start;
     top: 60px;
     font-weight: 500;
-    color: #000000
+    color: #000000;
+    text-transform: uppercase;
 }
 
 ul {
@@ -236,7 +237,6 @@ ul {
     text-align: left;
     bottom: -25px;
     right: 50px;
-    text-transform: uppercase;
     line-height: 1.5em;
 }
 
@@ -257,7 +257,6 @@ ul {
     text-align: left;
     bottom: -25px;
     right: 50px;
-    text-transform: uppercase;
     line-height: 1.5em;
 }
 
